--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,14 +1,70 @@
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
+// .container {
+//   width: 1200px;
+//   margin: 0 auto;
+//   padding: 0 15px;
+// }
+
+// .footer {
+//   background-color: $footer-color;
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+//   height: 252px;
+
+//   &-adress {
+//     font-size: 14px;
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//     color: #ffffff;
+//     display: inline-block;
+//     margin-bottom: 9px;
+//   }
+
+//   &-contacts-mail {
+//     font-size: 14px;
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//     color: rgba(255, 255, 255, 0.6);
+//     display: inline-block;
+//     margin-bottom: 9px;
+//   }
+
+//   &-contacts-tel {
+//     font-size: 14px;
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//     color: rgba(255, 255, 255, 0.6);
+//     display: inline-block;
+//   }
+
+//   &-flex {
+//     display: flex;
+//     justify-content: center;
+//     align-items: baseline;
+//   }
+
+//   &-title {
+//     font-family: $mainFont;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+
+//     color: #ffffff;
+//   }
+
+//   &-social {
+//     margin-left: 70px;
+//   }
+// }
 
 .footer {
   background-color: $footer-color;
   padding-top: 60px;
   padding-bottom: 60px;
-  height: 252px;
+  height: auto;
+  text-align: center;
 
   &-adress {
     font-size: 14px;
@@ -16,7 +72,7 @@
     letter-spacing: 0.03em;
     color: #ffffff;
     display: inline-block;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
   }
 
   &-contacts-mail {
@@ -25,7 +81,7 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     display: inline-block;
-    margin-bottom: 9px;
+    margin-bottom: 8px;
   }
 
   &-contacts-tel {
@@ -36,12 +92,6 @@
     display: inline-block;
   }
 
-  &-flex {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-  }
-
   &-title {
     font-family: $mainFont;
     font-style: normal;
@@ -50,11 +100,13 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-top: 60px;
+    margin-bottom: 0;
 
     color: #ffffff;
   }
 
-  &-social {
-    margin-left: 70px;
-  }
+  //   &-social {
+  //     margin-left: 70px;
+  //   }
 }
