--- a/sass/components/_modal--boxes.scss
+++ b/sass/components/_modal--boxes.scss
@@ -1,3 +1,93 @@
+// .btn-modal-send {
+//   width: 200px;
+//   height: 50px;
+
+//   background: $primary-accent-color;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+//   border: none;
+
+//   font-family: $mainFont;
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 16px;
+//   line-height: 1.875;
+//   letter-spacing: 0.06em;
+
+//   color: #ffffff;
+//   cursor: pointer;
+//   margin-top: 30px;
+//   margin-left: 165px;
+//   margin-right: 163px;
+
+//   &:hover {
+//     background-color: #188ce8;
+//   }
+// }
+
+// .checkbox {
+//   padding-left: 1.2em;
+// }
+
+// .custom-box {
+//   position: absolute;
+//   margin-left: 3.2em;
+//   margin-top: 0.22em;
+//   width: 16px;
+//   height: 15px;
+//   background-image: url(../images/empty-checkbox.svg);
+//   background-repeat: no-repeat;
+//   pointer-events: none;
+// }
+
+// .form-input-check {
+//   position: absolute;
+//   opacity: 0;
+//   margin-left: 3.3em;
+//   margin-top: 5px;
+
+//   &:checked + .custom-box {
+//     border-radius: 2px;
+//     background-image: url(../images/Rectangle.svg);
+//   }
+
+//   &:checked:focus + .custom-box {
+//     border-radius: 0.05em;
+//     background-image: url(../images/Rectangle.svg);
+//   }
+
+//   &:focus + .custom-box {
+//     background-image: url(../images/empty-checkbox-blue.svg);
+//   }
+// }
+
+// .form-field-label {
+//   font-family: $mainFont;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 12px;
+//   line-height: 1.166px;
+
+//   letter-spacing: 0.01em;
+
+//   color: $primary-text-color;
+// }
+
+// .form-field-agreement {
+//   font-family: $mainFont;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: 0.03em;
+//   color: $primary-text-color;
+//   margin-left: 14%;
+
+//   & a {
+//     color: $primary-accent-color;
+//   }
+// }
+
 .btn-modal-send {
   width: 200px;
   height: 50px;
@@ -17,8 +107,10 @@
   color: #ffffff;
   cursor: pointer;
   margin-top: 30px;
-  margin-left: 165px;
-  margin-right: 163px;
+
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
 
   &:hover {
     background-color: #188ce8;
@@ -31,8 +123,7 @@
 
 .custom-box {
   position: absolute;
-  margin-left: 3.2em;
-  margin-top: 0.22em;
+  // margin-top: 0.22em;
   width: 16px;
   height: 15px;
   background-image: url(../images/empty-checkbox.svg);
@@ -41,22 +132,25 @@
 }
 
 .form-input-check {
-  position: absolute;
+  // position: absolute;
   opacity: 0;
-  margin-left: 3.3em;
-  margin-top: 5px;
+  margin-right: 8px;
+  // margin-top: 5px;
 
   &:checked + .custom-box {
+    position: absolute;
     border-radius: 2px;
     background-image: url(../images/Rectangle.svg);
   }
 
   &:checked:focus + .custom-box {
+    position: absolute;
     border-radius: 0.05em;
     background-image: url(../images/Rectangle.svg);
   }
 
   &:focus + .custom-box {
+    position: absolute;
     background-image: url(../images/empty-checkbox-blue.svg);
   }
 }
@@ -77,13 +171,18 @@
   font-family: $mainFont;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.666;
   letter-spacing: 0.03em;
   color: $primary-text-color;
-  margin-left: 14%;
+  // margin-left: 14%;
 
   & a {
     color: $primary-accent-color;
   }
+}
+
+.form-check {
+  display: inline-flex;
+  align-items: center;
 }
