--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,3 +1,96 @@
+// .backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.2);
+//   transition: all 0.5s ease-in;
+//   overflow: scroll;
+// }
+
+// body.modal-open {
+//   overflow: hidden;
+// }
+
+// .backdrop.is-hidden {
+//   visibility: hidden;
+//   opacity: 0;
+//   pointer-events: none;
+// }
+
+// .is-hidden .modal {
+//   transform: translate(-50%, -100%) scale(0.5);
+// }
+
+// .modal {
+//   width: 528px;
+//   height: 581px;
+
+//   background-color: #fff;
+
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%) scale(1);
+//   transition: transform 0.5s;
+
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+//   border-radius: 4px;
+
+//   &-container {
+//     max-width: 441px;
+//     padding-left: 41px;
+//     padding-right: 39px;
+//   }
+
+//   &-btn-close {
+//     position: absolute;
+//     top: 0;
+//     right: 8px;
+//     display: inline-flex;
+//     justify-content: center;
+//     align-items: center;
+//     border: 1px solid rgba(0, 0, 0, 0.1);
+//     border-radius: 50%;
+//     width: 30px;
+//     height: 30px;
+//     color: #afb1b8;
+//     background-color: #fff;
+//     margin-top: 8px;
+//     margin-bottom: 2px;
+//     padding: 0;
+//   }
+
+//   &-btn-close:hover {
+//     fill: $primary-accent-color;
+//     transition: $hover-animation;
+//     transform: rotate(180deg);
+//     cursor: pointer;
+//   }
+
+//   &-title {
+//     font-family: $mainFont;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 20px;
+//     line-height: 1.15;
+//     white-space: nowrap;
+//     letter-spacing: 0.03em;
+
+//     margin-top: 40px;
+//     margin-bottom: 12px;
+
+//     color: $hr-text-color;
+//   }
+// }
+
+// .svg-btn {
+//   width: 11px;
+//   height: 11px;
+// }
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -6,6 +99,11 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: all 0.5s ease-in;
+  overflow: scroll;
+}
+
+body.modal-open {
+  overflow: hidden;
 }
 
 .backdrop.is-hidden {
@@ -19,8 +117,9 @@
 }
 
 .modal {
-  height: 581px;
-  width: 528px;
+  width: 450px;
+  height: 609px;
+
   background-color: #fff;
 
   position: absolute;
@@ -34,9 +133,8 @@
   border-radius: 4px;
 
   &-container {
-    max-width: 441px;
-    padding-left: 41px;
-    padding-right: 39px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   &-btn-close {
@@ -70,8 +168,9 @@
     font-weight: bold;
     font-size: 20px;
     line-height: 1.15;
-    white-space: nowrap;
+    // white-space: wrap;
     letter-spacing: 0.03em;
+    text-align: center;
 
     margin-top: 40px;
     margin-bottom: 12px;
