--- a/sass/components/_portfolio--filters.scss
+++ b/sass/components/_portfolio--filters.scss
@@ -1,67 +1,67 @@
-.portfolio {
-  background-color: #ffffff;
-  box-sizing: border-box;
+// .portfolio {
+//   background-color: #ffffff;
+//   box-sizing: border-box;
 
-  &-nav-btn,
-  &-nav-btn-active {
-    background-color: $secondary-bg-color;
-    color: $hr-text-color;
-    font-family: $mainFont;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-right: 8px;
-    margin-top: 100px;
+//   &-nav-btn,
+//   &-nav-btn-active {
+//     background-color: $secondary-bg-color;
+//     color: $hr-text-color;
+//     font-family: $mainFont;
+//     font-style: normal;
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.62;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     margin-right: 8px;
+//     margin-top: 100px;
 
-    width: auto;
-    height: 38px;
-    left: 576px;
-    top: 174px;
-    border-radius: 4px;
-    border: none;
-    padding: 6px 22px;
-  }
+//     width: auto;
+//     height: 38px;
+//     left: 576px;
+//     top: 174px;
+//     border-radius: 4px;
+//     border: none;
+//     padding: 6px 22px;
+//   }
 
-  &-nav {
-    display: flex;
-    justify-content: center;
-  }
+//   &-nav {
+//     display: flex;
+//     justify-content: center;
+//   }
 
-  &-nav-btn:hover,
-  &-nav-btn:focus {
-    transition: $hover-animation;
-    background-color: $primary-accent-color;
-    color: #ffffff;
-    cursor: pointer;
-  }
+//   &-nav-btn:hover,
+//   &-nav-btn:focus {
+//     transition: $hover-animation;
+//     background-color: $primary-accent-color;
+//     color: #ffffff;
+//     cursor: pointer;
+//   }
 
-  &-active {
-    background-color: $primary-accent-color;
-    color: #ffffff;
-    cursor: pointer;
-  }
-}
+//   &-active {
+//     background-color: $primary-accent-color;
+//     color: #ffffff;
+//     cursor: pointer;
+//   }
+// }
 
-.port-name {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  color: $hr-text-color;
-  margin-top: 20px;
-  margin-bottom: 4px;
-  margin-left: 21px;
-  margin-right: 21px;
-}
+// .port-name {
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 36px;
+//   letter-spacing: 0.06em;
+//   color: $hr-text-color;
+//   margin-top: 20px;
+//   margin-bottom: 4px;
+//   margin-left: 21px;
+//   margin-right: 21px;
+// }
 
-.port-sub {
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 6%;
-  color: $primary-text-color;
-  margin-left: 22px;
-  margin-right: 22px;
-}
+// .port-sub {
+//   font-size: 16px;
+//   line-height: 1.87;
+//   letter-spacing: 6%;
+//   color: $primary-text-color;
+//   margin-left: 22px;
+//   margin-right: 22px;
+// }
