--- a/sass/components/_whatwedo.scss
+++ b/sass/components/_whatwedo.scss
@@ -1,22 +1,135 @@
+// .work {
+//   background: #ffffff;
+//   margin-bottom: 94px;
+
+//   &-list {
+//     display: flex;
+//     align-items: center;
+//     margin-bottom: 94px;
+//     justify-content: space-between;
+//   }
+
+//   &-items {
+//     width: 270px;
+//     margin-top: 94px;
+//   }
+
+//   &-icons {
+//     display: inline-block;
+//     width: 270px;
+//     height: 120px;
+
+//     background-color: $secondary-bg-color;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//   }
+
+//   &-head {
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     color: $hr-text-color;
+//     margin-top: 30px;
+//     margin-bottom: 10px;
+//   }
+
+//   &-text {
+//     font-size: 14px;
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//     color: $primary-text-color;
+//     max-width: 270px;
+//   }
+// }
+
+// .first {
+//   background-image: url(../images/antenna.svg);
+// }
+
+// .second {
+//   background-image: url(../images/clock.svg);
+// }
+
+// .third {
+//   background-image: url(../images/diagram.svg);
+// }
+
+// .fourth {
+//   background-image: url(../images/astronaut.svg);
+// }
+
+// .wedo {
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 1.16;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: $hr-text-color;
+
+//   &-label {
+//     position: absolute;
+//     width: 100%;
+//     height: 70px;
+//     bottom: 0;
+//     left: 0;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     background: rgba(47, 48, 58, 0.8);
+//     padding-top: 27px;
+//     padding-bottom: 27px;
+//     padding-left: 83px;
+//     padding-right: 82px;
+//     text-align: center;
+//     margin-top: 0;
+//     margin-bottom: 0;
+
+//     color: #ffffff;
+//   }
+// }
+
+// .list-items {
+//   display: flex;
+//   justify-content: space-between;
+//   width: 1170px;
+//   padding-left: 0;
+//   margin: 0 auto;
+//   margin-top: 50px;
+// }
+
+// .list-item {
+//   display: block;
+//   position: relative;
+// }
+
 .work {
   background: #ffffff;
-  margin-bottom: 94px;
+  // margin-bottom: 94px;
 
   &-list {
-    display: flex;
-    align-items: center;
-    margin-bottom: 94px;
+    // display: flex;
+    // align-items: center;
+    margin-bottom: 60px;
     justify-content: space-between;
   }
 
   &-items {
-    width: 270px;
-    margin-top: 94px;
+    width: 100%;
+    margin-top: 30px;
+
+    &:first-child {
+      margin-top: 60px;
+    }
   }
 
   &-icons {
     display: inline-block;
-    width: 270px;
+    width: 100%;
     height: 120px;
 
     background-color: $secondary-bg-color;
@@ -33,6 +146,7 @@
     color: $hr-text-color;
     margin-top: 30px;
     margin-bottom: 10px;
+    text-align: center;
   }
 
   &-text {
@@ -40,7 +154,6 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $primary-text-color;
-    max-width: 270px;
   }
 }
 
@@ -60,49 +173,6 @@
   background-image: url(../images/astronaut.svg);
 }
 
-.wedo {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: $hr-text-color;
-
-  &-label {
-    position: absolute;
-    width: 100%;
-    height: 70px;
-    bottom: 0;
-    left: 0;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    background: rgba(47, 48, 58, 0.8);
-    padding-top: 27px;
-    padding-bottom: 27px;
-    padding-left: 83px;
-    padding-right: 82px;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 0;
-
-    color: #ffffff;
-  }
-}
-
-.list-items {
-  display: flex;
-  justify-content: space-between;
-  width: 1170px;
-  padding-left: 0;
-  margin: 0 auto;
-  margin-top: 50px;
-}
-
-.list-item {
-  display: block;
-  position: relative;
+.wedo-box {
+  display: none;
 }
