--- a/css/main.css
+++ b/css/main.css
@@ -471,6 +471,7 @@ body {
     width: 100%;
     z-index: 999;
     background: #ffffff;
+    border-top: none;
     -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
     text-align: center;
@@ -1026,6 +1027,144 @@ body {
 
 .form-btn:hover {
   background-color: #188ce8;
+}
+
+.portfolio {
+  background-color: #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.portfolio-nav-btn, .portfolio-nav-btn-active {
+  background-color: #f5f4fa;
+  color: #212121;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-right: 8px;
+  margin-top: 15px;
+  width: auto;
+  height: 38px;
+  left: 576px;
+  top: 174px;
+  border-radius: 4px;
+  border: none;
+  padding: 6px 22px;
+}
+
+.portfolio-nav {
+  padding-top: 45px;
+  padding-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.portfolio-nav-btn:hover, .portfolio-nav-btn:focus {
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.portfolio-active {
+  background-color: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.port-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: #212121;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.port-sub {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 6%;
+  color: #757575;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 0;
+}
+
+.overlay-img {
+  position: relative;
+  overflow: hidden;
+  height: 294px;
+}
+
+.product {
+  overflow: hidden;
+  padding-bottom: 30px;
+}
+
+.product-cards {
+  display: block;
+  height: 404px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  margin-bottom: 30px;
+}
+
+.product-label {
+  position: absolute;
+  top: -17px;
+  left: 0;
+  width: 100%;
+  height: 294px;
+  font-size: 17.5px;
+  line-height: 1.555;
+  letter-spacing: 0.03em;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding-top: 63px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  text-align: left;
+  color: #ffffff;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+
+.product-cards:hover, .product-cards:focus {
+  cursor: pointer;
+  border: 1px solid #eeeeee;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.product-cards:hover .product-label,
+.product-cards:focus .product-label {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .backdrop {
