--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -206,6 +206,7 @@
     width: 100%;
     z-index: 999;
     background: #ffffff;
+    border-top: none;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 1px 3px rgba(0, 0, 0, 0.16);
     text-align: center;
