--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -65,3 +65,93 @@
 //     transform: translateY(0);
 //   }
 // }
+
+.port-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: $hr-text-color;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.port-sub {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 6%;
+  color: $primary-text-color;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 0;
+}
+
+.overlay-img {
+  position: relative;
+  overflow: hidden;
+  height: 294px;
+}
+
+// .last {
+//   margin-right: 0;
+//   margin-bottom: 0;
+// }
+
+.product {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   margin-top: 50px;
+  //   margin-bottom: 94px;
+  overflow: hidden;
+  padding-bottom: 30px;
+
+  &-cards {
+    display: block;
+
+    height: 404px;
+
+    background: #ffffff;
+    border: 1px solid #eeeeee;
+    // margin-right: 30px;
+    margin-bottom: 30px;
+  }
+
+  &-label {
+    position: absolute;
+    top: -17px;
+    left: 0;
+    width: 100%;
+    height: 294px;
+    font-size: 17.5px;
+    line-height: 1.555;
+    letter-spacing: 0.03em;
+
+    background-color: rgba(33, 150, 243, 0.9);
+    padding-top: 63px;
+    padding-bottom: 63px;
+    padding-left: 24px;
+    padding-right: 24px;
+    text-align: left;
+
+    color: #ffffff;
+    transition: $hover-animation;
+    transition-duration: 500ms;
+    transform: translateY(100%);
+  }
+
+  &-cards:hover,
+  &-cards:focus {
+    cursor: pointer;
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+
+  &-cards:hover &-label,
+  &-cards:focus &-label {
+    transform: translateY(0);
+  }
+}
