--- a/css/main.css
+++ b/css/main.css
@@ -412,6 +412,12 @@ body {
   padding: 0 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
 .head {
   border-bottom: 1px solid #ececec;
 }
@@ -487,6 +493,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -501,6 +510,24 @@ body {
   margin-bottom: 40px;
 }
 
+@media screen and (min-width: 768px) {
+  .nav-link,
+  .nav-link-active {
+    font-size: 14px;
+    line-height: 1.142;
+    margin-bottom: 0;
+    margin-right: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .nav-mail {
   color: #757575;
   display: inline-block;
@@ -511,10 +538,23 @@ body {
   line-height: 1.16;
 }
 
+@media screen and (min-width: 768px) {
+  .nav-mail {
+    font-size: 12px;
+    line-height: 1.166;
+  }
+}
+
 .nav-link-active {
   position: relative;
   color: #2196f3;
   margin-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link-active {
+    margin-bottom: 0;
+  }
 }
 
 .nav-link-active::after {
@@ -526,6 +566,12 @@ body {
   height: 4px;
   border-radius: 2px;
   background-color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link-active::after {
+    bottom: -32px;
+  }
 }
 
 .nav-link:hover, .nav-link:focus, .nav-mail:hover, .nav-mail:focus, .nav-tel:hover, .nav-tel:focus {
@@ -544,8 +590,15 @@ body {
   color: #757575;
   display: inline-block;
   margin-left: 10px;
-  margin-top: 16px;
-  padding-bottom: 60px;
+  margin-top: 10px;
+  padding-bottom: 21px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-tel {
+    font-size: 12px;
+    line-height: 1.166;
+  }
 }
 
 .nav-contacts:hover, .nav-contacts:focus {
@@ -556,9 +609,20 @@ body {
   color: #2196f3;
 }
 
-.icon-mail,
-.icon-tel {
+.nav .icon-mail,
+.nav .icon-tel {
   fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-contacts {
+    padding-left: 35px;
+  }
+}
+
+.nav.icon-mail {
+  width: 16px;
+  height: 12px;
 }
 
 .hero {
