--- a/css/main.css
+++ b/css/main.css
@@ -683,9 +683,20 @@ body {
 
 .work-list {
   margin-bottom: 60px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .work-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 30px;
+  }
 }
 
 .work-items {
@@ -695,6 +706,15 @@ body {
 
 .work-items:first-child {
   margin-top: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .work-items {
+    width: calc((100% - 30px) / 2);
+  }
+  .work-items:first-child {
+    margin-top: 30px;
+  }
 }
 
 .work-icons {
@@ -716,6 +736,12 @@ body {
   margin-top: 30px;
   margin-bottom: 10px;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .work-head {
+    text-align: left;
+  }
 }
 
 .work-text {
@@ -748,13 +774,27 @@ body {
 .team {
   background-color: #f5f4fa;
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 
 .team-list {
   max-width: 480px;
   width: 100%;
   padding-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    max-width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .team-title {
@@ -795,10 +835,13 @@ body {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
 }
 
-.team-card:not(:first-child) {
-  margin-top: 30px;
+@media screen and (min-width: 768px) {
+  .team-card {
+    width: calc((100% - 30px) / 2);
+  }
 }
 
 .social-link {
@@ -838,8 +881,20 @@ body {
   margin-left: 122px;
 }
 
+@media screen and (min-width: 768px) {
+  .social-link:first-child {
+    margin-left: 74px;
+  }
+}
+
 .social-link:last-child {
   margin-right: 122px;
+}
+
+@media screen and (min-width: 768px) {
+  .social-link:last-child {
+    margin-right: 74px;
+  }
 }
 
 .social-link:hover, .social-link:focus {
@@ -875,6 +930,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .client-card {
+    width: 226px;
+  }
 }
 
 .client-item {
@@ -931,6 +992,12 @@ body {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 0;
+  }
+}
+
 .footer-adress {
   font-size: 14px;
   line-height: 1.71;
@@ -968,6 +1035,19 @@ body {
   margin-top: 60px;
   margin-bottom: 0;
   color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-flex-tablet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .social-links-footer {
@@ -1046,6 +1126,17 @@ body {
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (min-width: 768px) {
+  .form-input {
+    width: 450px;
+    display: block;
+    position: relative;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
 }
 
 .form-input:focus {
@@ -1133,6 +1224,14 @@ body {
       flex-wrap: wrap;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio-nav {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .portfolio-nav-btn:hover, .portfolio-nav-btn:focus {
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1182,12 +1281,38 @@ body {
   padding-bottom: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .product {
+    max-width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .product-cards {
   display: block;
   height: 404px;
   background: #ffffff;
   border: 1px solid #eeeeee;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .product-cards {
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .product-cards {
+    width: 354px;
+  }
 }
 
 .product-label {
