--- a/sass/components/_footer--forms.scss
+++ b/sass/components/_footer--forms.scss
@@ -99,6 +99,14 @@
   width: 100%;
   height: 50px;
 
+  @media screen and (min-width: $tablet) {
+    width: 450px;
+    display: block;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
