--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -62,6 +62,11 @@
 .footer {
   background-color: $footer-color;
   padding-top: 60px;
+
+  @media screen and (min-width: $tablet) {
+    padding-top: 0;
+  }
+
   padding-bottom: 60px;
   height: auto;
   text-align: center;
@@ -109,4 +114,12 @@
   //   &-social {
   //     margin-left: 70px;
   //   }
+}
+
+.footer-flex-tablet {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+  }
 }
