--- a/sass/components/_portfolio--filters.scss
+++ b/sass/components/_portfolio--filters.scss
@@ -98,6 +98,10 @@
     padding-bottom: 40px;
     display: flex;
     justify-content: left;
+
+    @media screen and(min-width:$tablet) {
+      justify-content: center;
+    }
     flex-wrap: wrap;
   }
 
