--- a/sass/components/_social--links.scss
+++ b/sass/components/_social--links.scss
@@ -63,10 +63,18 @@
 
   &:first-child {
     margin-left: 122px;
+
+    @media screen and (min-width: $tablet) {
+      margin-left: 74px;
+    }
   }
 
   &:last-child {
     margin-right: 122px;
+
+    @media screen and (min-width: $tablet) {
+      margin-right: 74px;
+    }
   }
 
   &:hover,
