--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -56,12 +56,28 @@
 .team {
   background-color: $secondary-bg-color;
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
+
+  // @media screen and (min-weight: 768px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  // }
 
   &-list {
     max-width: 480px;
     width: 100%;
     padding-top: 30px;
+
+    // @media screen and (min-weight: 768px) {
+    //   max-width: 354px;
+    // }
+
+    @media screen and (min-width: 768px) {
+      max-width: 768px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
 
   &-title {
@@ -102,9 +118,10 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  }
+    margin-bottom: 30px;
 
-  &-card:not(:first-child) {
-    margin-top: 30px;
+    @media screen and(min-width:768px) {
+      width: calc((100% - 30px) / 2);
+    }
   }
 }
