--- a/sass/components/_whatwedo.scss
+++ b/sass/components/_whatwedo.scss
@@ -115,7 +115,14 @@
     // display: flex;
     // align-items: center;
     margin-bottom: 60px;
-    justify-content: space-between;
+    // justify-content: space-between;
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-bottom: 30px;
+    }
   }
 
   &-items {
@@ -124,6 +131,16 @@
 
     &:first-child {
       margin-top: 60px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 30px) / 2);
+
+      // margin-bottom: 30px;
+
+      &:first-child {
+        margin-top: 30px;
+      }
     }
   }
 
@@ -147,6 +164,10 @@
     margin-top: 30px;
     margin-bottom: 10px;
     text-align: center;
+
+    @media screen and(min-width:768px) {
+      text-align: left;
+    }
   }
 
   &-text {
@@ -159,6 +180,10 @@
 
 .first {
   background-image: url(../images/antenna.svg);
+
+  // @media screen and(min-width:768px) {
+  //   margin-right: 10px;
+  // }
 }
 
 .second {
